web/src/stylesheets/pages/page--goals.scss
@import "../components/plan-switcher";
@import "../components/goal_tabs";
@import "../components/strength-meter";
@import "../components/flip-cards";
@import "../../../../bower_components/bootstrap/scss/mixins/clearfix";

h2.plan-name {
	border-bottom: none;
}

.goal-viewer-wrapper {
	display: flex;
	flex-flow: column nowrap;
}
.goal-viewer {
	flex: 2 1 70%;
	padding:1rem;
	color: $color-lr-grey;
	position: relative;

	h1 {
		font-size: 1.75rem;
		font-weight: 300;
		margin-bottom: 1.35rem;
		padding: 0 7.5rem 0 0 !important;

		.goal-type {
			font-weight: 400;
			padding-right: .25rem;
			&:after {
				content: ": ";
			}
		}
	}

	.actions.goal-actions {
		position: absolute;
		right: 1rem;
		top: 1.45rem;
	}

}

.printpage {
	position: absolute;
	right: 0;
	top: 4.75rem;
	z-index: 99;

	a {
		color: transparent;
		text-decoration: none;
		height: 2.75rem;
		padding: .5rem;
		display: block;

		&::before {
			content: '\f02f';
			font-family: FontAwesome;
			color: $color-lr-brand;
			font-size: 1.15rem;
			display: block;
		}
	}

}

.alignment {
	display: flex;
	flex-flow: column nowrap;
	flex: 1 1 30%;
	border-top: 1px solid #ddd;
	border-left: none;
	margin: 1rem 0 1rem 1rem;
	text-align: center;
	padding-top: 2.5rem;
	position: relative;

	.alignment-header {
		margin-bottom: 1.25rem;
		font-weight: 300;
		font-size: 1.75rem;
		color: $color-lr-grey;
	}

	.card {
		user-select: none;
		cursor: pointer;
		background: lighten($color-lr-light-grey, 15%);
		color: $color-white;
		border: 1px solid darken($color-lr-light-grey, 5%);
		margin: 1.5rem auto 0;
		width: 75%;
		font-size: 1.75rem;
		font-weight: 400;
		line-height: 2.5rem;

		.face {

		}

		.card-block {
			padding: 3rem 2rem;
			min-height: 17rem;
			display: flex;
			flex: 1;
			align-items: center;
			justify-content: center;
			width: 100%;

			.fa-info-circle {
				&::before {
					font-size: 60%;
					margin-left: .5rem;
					vertical-align: middle;
				}
			}

		}

		+ .card {
			margin-top: 2rem;
		}

		&.primary {
			background: $color-lr-light-grey;
			border: 1px solid darken($color-lr-light-grey, 5%);
			box-shadow: 0 0 19px rgba(42, 53, 66, 0.7);

			.face {
				background: $color-lr-light-grey;
				//border: 1px solid darken($color-lr-light-grey, 5%);
			}

		}

	}

	.personal-alignment-graph {
		position: relative;
	}

	.info.message {
		font-size: 1rem;
	}

}

.goal-wrapper {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	flex-direction: row;
	padding: 1rem;
	flex: 1;

	.goal-info-wrapper, .goal-measurement {
		display: flex;
	}

	.goal-info-wrapper {
		flex: 1;
		flex-direction: row;
		flex-wrap: wrap;
		font-size: 85%;
	}

	> .goal-measurement{
		text-align: center;
		flex-direction: column;
		flex: 2;

		.goal-measurement {
			align-self: center;
			width: 100%;
		}

	}

	.description, .start-date, .end-date, .goal-ev {

		label {
			display: block;
			font-weight: 400;
			padding-right: 1ch;
			margin-bottom: 0;
			&:after {
				content: ": ";
			}
		}

		div.val {
			display: inline-block;
		}

	}

	.goal-ev {
		flex: 2 0 100%;
		width: 100%;
		padding-bottom: 1.5rem;
	}

	.description {
		flex: 2 1 100%;
		order: 3;
		width: 100%;
		padding: 1.5rem 3rem 1.5rem 0;
	}

	.start-date, .end-date {
		flex: 1;
		width: 35%;
		//font-size: 85%;
	}

	.goal-measurement-actions {
		margin:0;
	}
	.measure-config-graph {
		margin: 0 auto;
		position: relative;
	}
	.config-graph {
		//position: relative;
		margin: 0 auto;
	}
	.config-graph-text {
		position: absolute;
		top:calc(50% - 40px);
		bottom:0;
		left:0;
		right:0;
		font-size: 3rem;
		font-weight: 400;
		color: $brand-primary;
	}
	.prop-group.smart-gauge {
		display: flex;
		flex: 1;
		justify-content: flex-start;
		padding-bottom: 3rem;
		order: 4;
	}

	//CAROUSEL
	.carousel-indicators {
		display: none;
	}

	.carousel-control {

		&.right, &.left {
			background-image: none;
			text-shadow: none;
		}

		.icon-next, .icon-prev {
			color: $color-lr-grey;
			font-size: 4rem;
			margin-top: -4rem;
			height: 4rem;
		}

	}

	.carousel-inner {

		.config-graph {
			canvas {
				max-width: 100%;
				max-height: 100%;
			}
		}

		.carousel-caption {
			position: relative;
			bottom: auto;
			left: auto;
			right: auto;
			color: $color-lr-light-grey;
			text-shadow: none;
			padding: 1rem 0;

			p {
				font-size: 1.25rem;
				font-weight: 500;
				margin-bottom: 0;
			}

		}

	}

}

.chart-legend {
	//float:left;
	min-width: 8rem;

	.legend-header {
		color:$color-lr-grey;
		font-weight: 300;
		margin-bottom: .25rem;
		font-size: 1rem;
	}

	ul {
		list-style: none;
		margin-left: 0;
		padding-left: 0;

		&:not(.radar-legend) {
			text-align: left;
		}

	}

	li {
		padding: 0;
		margin: 0 0 .25rem;
		font-size: .75rem;
		span {
			display: inline-block;
			width: 12px;
			height: 12px;
			margin-right: 5px;
			border-radius: 100%;

			&.legend-label {
				width: auto;
			}

			&.aligned {
				font-weight: 500;
				font-size: 1.25rem;
				color: $color-lr-grey;
			}

		}
	}
}
/* ... */

